added contact us

--- a/navbar.html
+++ b/navbar.html
@@ -53,8 +53,8 @@
         <div class="navbar-right">
           <a href="index.html">Home</a>
           <a href="detect_emotions.html">Detect Emotions</a>
-          <a href="psychological_model.html">Our Project</a>
-          <a href="about_us.html">About Us</a>
+          <a href="our_project.html">Our Project</a>
+          <a href="contact_us.html">Contact Us</a>
         </div>
     </div>      
 </body>
